--- a/CaffStore.Frontend/src/app/caff-details/caff-details.component.css
+++ b/CaffStore.Frontend/src/app/caff-details/caff-details.component.css
@@ -16,11 +16,18 @@
     display: flex;
     flex-direction: column;
     width: 95%;
-    background-color: var(--color-accent);
     justify-content: space-evenly;
     align-items: center;
     margin: 16px;
     padding: 1em;
+}
+
+.new-comment-panel {
+    display: flex;
+    flex-direction: row;
+    width: 98%;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .comment-header {
@@ -37,8 +44,11 @@
 ::ng-deep .mat-icon{
     height: 20px !important;
     width: 20px !important;
-    color: red;
     font-size:20px !important;
+}
+
+.delete-icon {
+    color: red;
 }
 
 .comment-row {
