--- a/CaffStore.Frontend/src/app/caff-details/caff-details.component.html
+++ b/CaffStore.Frontend/src/app/caff-details/caff-details.component.html
@@ -2,7 +2,7 @@
   <div class="panels-row">
     <img
       mat-card-image
-      src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+      src="{{testCaff.previewFile.fileUri}}"
     />
     <div class="data-panel" [formGroup]="caffDataForm">
       <p class="form-title">CAFF data</p>
@@ -107,132 +107,44 @@
   </div>
 
   <div class="comment-section">
-    <mat-card class="comment-row">
+    <div class="new-comment-panel" [formGroup]="newCommentForm">
+      <mat-form-field class="form-element-long">
+        <mat-label for="commenttext">Write a comment</mat-label>
+        <textarea
+          matInput
+          type="text"
+          id="commenttext"
+          placeholder="Your thoughts here"
+          formControlName="commenttext"
+        ></textarea>
+      </mat-form-field>
+      <button
+        matTooltip="Send new comment"
+        mat-icon-button
+        (click)="onSendComment()"
+        aria-label="Send new comment"
+      >
+        <mat-icon>send</mat-icon>
+      </button>
+    </div>
+    <mat-card *ngFor="let comment of comments" class="comment-row">
       <mat-card-header class="comment-header">
-        <mat-card-title class="comment-label">User name</mat-card-title>
+        <mat-card-title class="comment-label">{{comment.createdBy.fullName}}</mat-card-title>
         <button
           matTooltip="Delete this comment"
           mat-icon-button
+          (click)="onDeleteComment(comment.id)"
           aria-label="Delete comment button"
         >
-          <mat-icon>clear</mat-icon>
+          <mat-icon class="delete-icon">clear</mat-icon>
         </button>
       </mat-card-header>
       <mat-card-content class="comment-text">
         <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz
-          breeds of dog from Japan. A small, agile dog that copes very well with
-          mountainous terrain, the Shiba Inu was originally bred for hunting.
+          {{comment.text}}
         </p>
       </mat-card-content>
     </mat-card>
-    <mat-card class="comment-row">
-      <mat-card-header>
-        <mat-card-title class="comment-label">User name</mat-card-title>
-      </mat-card-header>
-      <mat-card-content class="comment-text">
-        <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz
-          breeds of dog from Japan. A small, agile dog that copes very well with
-          mountainous terrain, the Shiba Inu was originally bred for hunting.
-        </p>
-      </mat-card-content>
-    </mat-card>
-    <mat-card class="comment-row">
-      <mat-card-header>
-        <mat-card-title class="comment-label">User name</mat-card-title>
-      </mat-card-header>
-      <mat-card-content class="comment-text">
-        <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz
-          breeds of dog from Japan. A small, agile dog that copes very well with
-          mountainous terrain, the Shiba Inu was originally bred for hunting.
-        </p>
-      </mat-card-content>
-    </mat-card>
-    <mat-card class="comment-row">
-      <mat-card-header>
-        <mat-card-title class="comment-label">User name</mat-card-title>
-      </mat-card-header>
-      <mat-card-content class="comment-text">
-        <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz
-          breeds of dog from Japan. A small, agile dog that copes very well with
-          mountainous terrain, the Shiba Inu was originally bred for hunting.
-        </p>
-      </mat-card-content>
-    </mat-card>
-    <mat-card class="comment-row">
-      <mat-card-header>
-        <mat-card-title class="comment-label">User name</mat-card-title>
-      </mat-card-header>
-      <mat-card-content class="comment-text">
-        <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz
-          breeds of dog from Japan. A small, agile dog that copes very well with
-          mountainous terrain, the Shiba Inu was originally bred for hunting.
-        </p>
-      </mat-card-content>
-    </mat-card>
-    <mat-card class="comment-row">
-      <mat-card-header>
-        <mat-card-title class="comment-label">User name</mat-card-title>
-      </mat-card-header>
-      <mat-card-content class="comment-text">
-        <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz
-          breeds of dog from Japan. A small, agile dog that copes very well with
-          mountainous terrain, the Shiba Inu was originally bred for hunting.
-        </p>
-      </mat-card-content>
-    </mat-card>
-    <mat-card class="comment-row">
-      <mat-card-header>
-        <mat-card-title class="comment-label">User name</mat-card-title>
-      </mat-card-header>
-      <mat-card-content class="comment-text">
-        <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz
-          breeds of dog from Japan. A small, agile dog that copes very well with
-          mountainous terrain, the Shiba Inu was originally bred for hunting.
-        </p>
-      </mat-card-content>
-    </mat-card>
-    <mat-card class="comment-row">
-      <mat-card-header>
-        <mat-card-title class="comment-label">User name</mat-card-title>
-      </mat-card-header>
-      <mat-card-content class="comment-text">
-        <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz
-          breeds of dog from Japan. A small, agile dog that copes very well with
-          mountainous terrain, the Shiba Inu was originally bred for hunting.
-        </p>
-      </mat-card-content>
-    </mat-card>
-    <mat-card class="comment-row">
-      <mat-card-header>
-        <mat-card-title class="comment-label">User name</mat-card-title>
-      </mat-card-header>
-      <mat-card-content class="comment-text">
-        <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz
-          breeds of dog from Japan. A small, agile dog that copes very well with
-          mountainous terrain, the Shiba Inu was originally bred for hunting.
-        </p>
-      </mat-card-content>
-    </mat-card>
-    <mat-card class="comment-row">
-      <mat-card-header>
-        <mat-card-title class="comment-label">User name</mat-card-title>
-      </mat-card-header>
-      <mat-card-content class="comment-text">
-        <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz
-          breeds of dog from Japan. A small, agile dog that copes very well with
-          mountainous terrain, the Shiba Inu was originally bred for hunting.
-        </p>
-      </mat-card-content>
-    </mat-card>
+    
   </div>
 </div>
