--- a/CaffStore.Frontend/src/app/shared/components/new-caff-dialog/new-caff-dialog.component.css
+++ b/CaffStore.Frontend/src/app/shared/components/new-caff-dialog/new-caff-dialog.component.css
@@ -62,3 +62,16 @@
     height: 65px;
   }
   
+  .overlay {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(53, 186, 246, 0.4);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 100;
+  }
