--- a/CaffStore.Frontend/src/app/caff-details/caff-details.component.html
+++ b/CaffStore.Frontend/src/app/caff-details/caff-details.component.html
@@ -84,8 +84,9 @@
       </div>
 
       <div class="row">
-        <div class="edit-download" *ngIf="!editingInProgress">
+        <div class="edit-download"  *ngIf="!editingInProgress">
           <button
+          id="deleteButton" 
           mat-button
           *ngIf="!editingInProgress && (isAdmin || isOwnerOfCaff)"
           style="background-color: #03a9f4"
@@ -95,6 +96,7 @@
           Edit
         </button>
           <button
+          id="downloadButton" 
             matTooltip="Download this CAFF file"
             *ngIf="!editingInProgress"
             mat-button
@@ -107,6 +109,7 @@
        
 
         <button
+        id="deleteButton" 
           matTooltip="Delete this CAFF file"
           *ngIf="!editingInProgress && (isAdmin || isOwnerOfCaff)"
           mat-button
